# Ded.-Got

./: .gitignore  ANALYSIS.md  AUDIT-pre-skeleton.md  CHARTER-0.1.md  Cargo.toml  DIFF-v2.1.md  DIFF-v2.2.md  DIFF-v2.3.md  PLATFORM.md  PROJECT.md  README.md  RECON.md  RUNTIME.md  SELF-AUDIT.md  SKELETON.md  clippy.toml  deny.toml  main.rs
.github/workflows/: ci.yml
audits/: README.md
audits/fluent35/: PILOT_NOTES.md  audit_v0.chunks_subset.jsonl  audit_v0.manual.jsonl  audit_v0.questions.jsonl
audits/fluent35/manifests/: 2026-05-02_v3.20_pilot_simulated.manifest.json
audits/fluent35/runs/: 2026-05-02_v3.20_pilot_simulated.jsonl
audits/puzzlebook35/: AUDIT_SCHEMA_NOTES.md  PILOT_NOTES.md  RATER_DELTA.md  RVP_PATCH_action_expected_alignment.md  audit_v0.chunks.jsonl  audit_v0.manual.jsonl  audit_v0.preflight.jsonl  audit_v0.questions.jsonl  pre_flight_sanity_check.jsonl  update_audit_v0_with_fitcheck_v2.py  update_audit_v0_with_raw_confirmation.py
audits/puzzlebook35/baseline_v0/: FITCHECK_AUDIT.md  FITCHECK_V1_DESIGN.md  FITCHECK_V2_DESIGN.md  NOTES.md  README.md  audit_fitcheck.py  extractor.py  pipeline.py  requirements.txt  retriever.py  sanity_check.py  validate_outputs.py
audits/puzzlebook35/baseline_v1_bm25/: COMPARE_v0_v1.md  NOTES.md  README.md  pipeline.py  requirements.txt  retriever_bm25.py  validate_outputs.py
audits/puzzlebook35/corpus/: puzzlebook_raw_chunks_v1.jsonl
audits/puzzlebook35/fitcheck_v1/: COMPARE_v0_v1_fitcheck.md  README.md  fitcheck_v1.py  lexicons.py  pipeline.py  test_fitcheck_v1.py  validate_outputs.py
crates/wpe-backend/: Cargo.toml
crates/wpe-backend/src/: caps.rs  (+5 more)
crates/wpe-cli/: Cargo.toml
crates/wpe-compat/: Cargo.toml
crates/wpe-contract-tests/: Cargo.toml
crates/wpe-contract-tests/src/: lib.rs  mock_renderer.rs  traced_backend.rs
crates/wpe-contract-tests/src/tests/: frame_output_invariants.rs  lifecycle_order.rs  mod.rs  no_gpu_in_backend.rs  pause_idempotent.rs  present_recovery.rs
crates/wpe-render-core/: Cargo.toml
experiments/thoughtstate_pilot_001/: REPORT.md
experiments/thoughtstate_pilot_002/: HANDOFF.md
prototype/src/: main.rs
q9_pilot/: INTEGRATION_ALTERNATIVES.md  SPIKE_FINDINGS.md  STATE_AS_GRAPH.md  claims.py  claims_extended.py  corpus.py  pilot.py  probe_coverage.py  probe_g2_retrievers.py  probe_g5_full_grid.py  probe_h_ru_extractor.py  probe_k0.py  probe_l_thinkloop.py  probe_n_t_decomposition.py  probe_o_intent_gated.py  probe_real_corpus.py  probe_v_health_audit.py  report_brittleness.py  report_classify.py  state.py  test_q4_extended.py  test_q4_unextended.py  test_q9.py  thought_spike.py
tools/: forbidden-imports.sh
(+32 files in other folders)
