[workspace]
resolver = "2"
members = [
    "crates/wpe-compat",
    "crates/wpe-backend",
    "crates/wpe-render-core",
    "crates/wpe-contract-tests",
]

# Prototype is excluded from the workspace — it has external deps
# (wayland-client, smithay-client-toolkit, wgpu) that require system
# libraries. It lives in prototype/ as a standalone throwaway.
exclude = ["prototype"]

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
